--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -46,6 +47,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+
     // Hilt - for DI
     implementation "com.google.dagger:hilt-android:2.43"
     kapt "com.google.dagger:hilt-compiler:2.43"
@@ -63,5 +67,10 @@ dependencies {
 
     // GSON - Google's JSON parser
     implementation "com.google.code.gson:gson:2.9.0"
+
+    // Nav - app navigation
+    def nav_version = "2.5.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
 }
