--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // WorkManager - new Android recommended for potentially long-running tasks
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
