--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.joshuakarl.serinotest'
 }
 
 dependencies {
@@ -69,7 +70,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.9.0"
 
     // Nav - app navigation
-    def nav_version = "2.5.1"
+    def nav_version = "2.5.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
